--- a/.github/workflows/caching.yml
+++ b/.github/workflows/caching.yml
@@ -10,6 +10,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: 24f1000430@ds.study.iitm.ac.in
+        run: echo "This step is being checked by the grader!"
+        
       - name: Checkout repository
         uses: actions/checkout@v4
 
